parse/kuneiform/gen/kuneiform_parser.go
// Code generated from KuneiformParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package gen // KuneiformParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type KuneiformParser struct {
	*antlr.BaseParser
}

var KuneiformParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func kuneiformparserParserInit() {
	staticData := &KuneiformParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'{'", "'}'", "'['", "']'", "':'", "';'", "'('", "')'", "','", "'@'",
		"'.'", "'='", "'database'", "'use'", "'import'", "'as'", "'min'", "'max'",
		"'minlen'", "'maxlen'", "", "", "'default'", "'unique'", "'index'",
		"'table'", "'type'", "'returns'", "", "", "", "", "", "", "'cascade'",
		"", "", "'restrict'", "'do'", "'action'", "'procedure'",
	}
	staticData.SymbolicNames = []string{
		"", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COL", "SCOL", "LPAREN",
		"RPAREN", "COMMA", "AT", "PERIOD", "EQUALS", "DATABASE", "USE", "IMPORT",
		"AS", "MIN", "MAX", "MIN_LEN", "MAX_LEN", "NOT_NULL", "PRIMARY", "DEFAULT",
		"UNIQUE", "INDEX", "TABLE", "TYPE", "RETURNS", "FOREIGN_KEY", "FOREIGN_PROCEDURE",
		"REFERENCES", "ON_UPDATE", "ON_DELETE", "DO_NO_ACTION", "DO_CASCADE",
		"DO_SET_NULL", "DO_SET_DEFAULT", "DO_RESTRICT", "DO", "START_ACTION",
		"START_PROCEDURE", "NUMERIC_LITERAL", "TEXT_LITERAL", "BOOLEAN_LITERAL",
		"BLOB_LITERAL", "VAR", "INDEX_NAME", "IDENTIFIER", "ANNOTATION", "WS",
		"TERMINATOR", "BLOCK_COMMENT", "LINE_COMMENT", "STMT_BODY", "TEXT",
		"STMT_LPAREN", "STMT_RPAREN", "STMT_COMMA", "STMT_PERIOD", "STMT_RETURNS",
		"STMT_TABLE", "STMT_ARRAY", "STMT_VAR", "STMT_ACCESS", "STMT_IDENTIFIER",
		"STMT_WS", "STMT_TERMINATOR", "STMT_BLOCK_COMMENT", "STMT_LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "stmt_mode", "database_declaration", "use_declaration", "foreign_declaration",
		"table_declaration", "column_def", "index_def", "foreign_key_def", "foreign_key_action",
		"identifier_list", "literal", "type_selector", "type_selector_list",
		"named_type_list", "typed_variable_list", "constraint", "action_declaration",
		"procedure_declaration", "stmt_return", "stmt_typed_param_list", "stmt_type_selector",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// KuneiformParserInit initializes any static state used to implement KuneiformParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewKuneiformParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func KuneiformParserInit() {
	staticData := &KuneiformParserParserStaticData
	staticData.once.Do(kuneiformparserParserInit)
}

// NewKuneiformParser produces a new parser instance for the optional input antlr.TokenStream.
func NewKuneiformParser(input antlr.TokenStream) *KuneiformParser {
	KuneiformParserInit()
	this := new(KuneiformParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &KuneiformParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "KuneiformParser.g4"

	return this
}

// KuneiformParser tokens.
const (
	KuneiformParserEOF                = antlr.TokenEOF
	KuneiformParserLBRACE             = 1
	KuneiformParserRBRACE             = 2
	KuneiformParserLBRACKET           = 3
	KuneiformParserRBRACKET           = 4
	KuneiformParserCOL                = 5
	KuneiformParserSCOL               = 6
	KuneiformParserLPAREN             = 7
	KuneiformParserRPAREN             = 8
	KuneiformParserCOMMA              = 9
	KuneiformParserAT                 = 10
	KuneiformParserPERIOD             = 11
	KuneiformParserEQUALS             = 12
	KuneiformParserDATABASE           = 13
	KuneiformParserUSE                = 14
	KuneiformParserIMPORT             = 15
	KuneiformParserAS                 = 16
	KuneiformParserMIN                = 17
	KuneiformParserMAX                = 18
	KuneiformParserMIN_LEN            = 19
	KuneiformParserMAX_LEN            = 20
	KuneiformParserNOT_NULL           = 21
	KuneiformParserPRIMARY            = 22
	KuneiformParserDEFAULT            = 23
	KuneiformParserUNIQUE             = 24
	KuneiformParserINDEX              = 25
	KuneiformParserTABLE              = 26
	KuneiformParserTYPE               = 27
	KuneiformParserRETURNS            = 28
	KuneiformParserFOREIGN_KEY        = 29
	KuneiformParserFOREIGN_PROCEDURE  = 30
	KuneiformParserREFERENCES         = 31
	KuneiformParserON_UPDATE          = 32
	KuneiformParserON_DELETE          = 33
	KuneiformParserDO_NO_ACTION       = 34
	KuneiformParserDO_CASCADE         = 35
	KuneiformParserDO_SET_NULL        = 36
	KuneiformParserDO_SET_DEFAULT     = 37
	KuneiformParserDO_RESTRICT        = 38
	KuneiformParserDO                 = 39
	KuneiformParserSTART_ACTION       = 40
	KuneiformParserSTART_PROCEDURE    = 41
	KuneiformParserNUMERIC_LITERAL    = 42
	KuneiformParserTEXT_LITERAL       = 43
	KuneiformParserBOOLEAN_LITERAL    = 44
	KuneiformParserBLOB_LITERAL       = 45
	KuneiformParserVAR                = 46
	KuneiformParserINDEX_NAME         = 47
	KuneiformParserIDENTIFIER         = 48
	KuneiformParserANNOTATION         = 49
	KuneiformParserWS                 = 50
	KuneiformParserTERMINATOR         = 51
	KuneiformParserBLOCK_COMMENT      = 52
	KuneiformParserLINE_COMMENT       = 53
	KuneiformParserSTMT_BODY          = 54
	KuneiformParserTEXT               = 55
	KuneiformParserSTMT_LPAREN        = 56
	KuneiformParserSTMT_RPAREN        = 57
	KuneiformParserSTMT_COMMA         = 58
	KuneiformParserSTMT_PERIOD        = 59
	KuneiformParserSTMT_RETURNS       = 60
	KuneiformParserSTMT_TABLE         = 61
	KuneiformParserSTMT_ARRAY         = 62
	KuneiformParserSTMT_VAR           = 63
	KuneiformParserSTMT_ACCESS        = 64
	KuneiformParserSTMT_IDENTIFIER    = 65
	KuneiformParserSTMT_WS            = 66
	KuneiformParserSTMT_TERMINATOR    = 67
	KuneiformParserSTMT_BLOCK_COMMENT = 68
	KuneiformParserSTMT_LINE_COMMENT  = 69
)

// KuneiformParser rules.
const (
	KuneiformParserRULE_program               = 0
	KuneiformParserRULE_stmt_mode             = 1
	KuneiformParserRULE_database_declaration  = 2
	KuneiformParserRULE_use_declaration       = 3
	KuneiformParserRULE_foreign_declaration   = 4
	KuneiformParserRULE_table_declaration     = 5
	KuneiformParserRULE_column_def            = 6
	KuneiformParserRULE_index_def             = 7
	KuneiformParserRULE_foreign_key_def       = 8
	KuneiformParserRULE_foreign_key_action    = 9
	KuneiformParserRULE_identifier_list       = 10
	KuneiformParserRULE_literal               = 11
	KuneiformParserRULE_type_selector         = 12
	KuneiformParserRULE_type_selector_list    = 13
	KuneiformParserRULE_named_type_list       = 14
	KuneiformParserRULE_typed_variable_list   = 15
	KuneiformParserRULE_constraint            = 16
	KuneiformParserRULE_action_declaration    = 17
	KuneiformParserRULE_procedure_declaration = 18
	KuneiformParserRULE_stmt_return           = 19
	KuneiformParserRULE_stmt_typed_param_list = 20
	KuneiformParserRULE_stmt_type_selector    = 21
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Database_declaration() IDatabase_declarationContext
	EOF() antlr.TerminalNode
	AllUse_declaration() []IUse_declarationContext
	Use_declaration(i int) IUse_declarationContext
	AllTable_declaration() []ITable_declarationContext
	Table_declaration(i int) ITable_declarationContext
	AllStmt_mode() []IStmt_modeContext
	Stmt_mode(i int) IStmt_modeContext
	AllForeign_declaration() []IForeign_declarationContext
	Foreign_declaration(i int) IForeign_declarationContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KuneiformParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Database_declaration() IDatabase_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDatabase_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDatabase_declarationContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(KuneiformParserEOF, 0)
}

func (s *ProgramContext) AllUse_declaration() []IUse_declarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IUse_declarationContext); ok {
			len++
		}
	}

	tst := make([]IUse_declarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IUse_declarationContext); ok {
			tst[i] = t.(IUse_declarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Use_declaration(i int) IUse_declarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUse_declarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUse_declarationContext)
}

func (s *ProgramContext) AllTable_declaration() []ITable_declarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITable_declarationContext); ok {
			len++
		}
	}

	tst := make([]ITable_declarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITable_declarationContext); ok {
			tst[i] = t.(ITable_declarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Table_declaration(i int) ITable_declarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITable_declarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITable_declarationContext)
}

func (s *ProgramContext) AllStmt_mode() []IStmt_modeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmt_modeContext); ok {
			len++
		}
	}

	tst := make([]IStmt_modeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmt_modeContext); ok {
			tst[i] = t.(IStmt_modeContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Stmt_mode(i int) IStmt_modeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmt_modeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmt_modeContext)
}

func (s *ProgramContext) AllForeign_declaration() []IForeign_declarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IForeign_declarationContext); ok {
			len++
		}
	}

	tst := make([]IForeign_declarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IForeign_declarationContext); ok {
			tst[i] = t.(IForeign_declarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Foreign_declaration(i int) IForeign_declarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForeign_declarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForeign_declarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KuneiformParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KuneiformParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KuneiformParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Database_declaration()
	}
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&566249629171712) != 0 {
		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case KuneiformParserUSE:
			{
				p.SetState(45)
				p.Use_declaration()
			}

		case KuneiformParserTABLE:
			{
				p.SetState(46)
				p.Table_declaration()
			}

		case KuneiformParserSTART_ACTION, KuneiformParserSTART_PROCEDURE, KuneiformParserANNOTATION:
			{
				p.SetState(47)
				p.Stmt_mode()
			}

		case KuneiformParserFOREIGN_PROCEDURE:
			{
				p.SetState(48)
				p.Foreign_declaration()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(54)
		p.Match(KuneiformParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStmt_modeContext is an interface to support dynamic dispatch.
type IStmt_modeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Action_declaration() IAction_declarationContext
	Procedure_declaration() IProcedure_declarationContext
	AllANNOTATION() []antlr.TerminalNode
	ANNOTATION(i int) antlr.TerminalNode

	// IsStmt_modeContext differentiates from other interfaces.
	IsStmt_modeContext()
}

type Stmt_modeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmt_modeContext() *Stmt_modeContext {
	var p = new(Stmt_modeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_stmt_mode
	return p
}

func InitEmptyStmt_modeContext(p *Stmt_modeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_stmt_mode
}

func (*Stmt_modeContext) IsStmt_modeContext() {}

func NewStmt_modeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Stmt_modeContext {
	var p = new(Stmt_modeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KuneiformParserRULE_stmt_mode

	return p
}

func (s *Stmt_modeContext) GetParser() antlr.Parser { return s.parser }

func (s *Stmt_modeContext) Action_declaration() IAction_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAction_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAction_declarationContext)
}

func (s *Stmt_modeContext) Procedure_declaration() IProcedure_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProcedure_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProcedure_declarationContext)
}

func (s *Stmt_modeContext) AllANNOTATION() []antlr.TerminalNode {
	return s.GetTokens(KuneiformParserANNOTATION)
}

func (s *Stmt_modeContext) ANNOTATION(i int) antlr.TerminalNode {
	return s.GetToken(KuneiformParserANNOTATION, i)
}

func (s *Stmt_modeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Stmt_modeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Stmt_modeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KuneiformParserVisitor:
		return t.VisitStmt_mode(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KuneiformParser) Stmt_mode() (localctx IStmt_modeContext) {
	localctx = NewStmt_modeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KuneiformParserRULE_stmt_mode)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == KuneiformParserANNOTATION {
		{
			p.SetState(56)
			p.Match(KuneiformParserANNOTATION)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case KuneiformParserSTART_ACTION:
		{
			p.SetState(62)
			p.Action_declaration()
		}

	case KuneiformParserSTART_PROCEDURE:
		{
			p.SetState(63)
			p.Procedure_declaration()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDatabase_declarationContext is an interface to support dynamic dispatch.
type IDatabase_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DATABASE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	SCOL() antlr.TerminalNode

	// IsDatabase_declarationContext differentiates from other interfaces.
	IsDatabase_declarationContext()
}

type Database_declarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDatabase_declarationContext() *Database_declarationContext {
	var p = new(Database_declarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_database_declaration
	return p
}

func InitEmptyDatabase_declarationContext(p *Database_declarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_database_declaration
}

func (*Database_declarationContext) IsDatabase_declarationContext() {}

func NewDatabase_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Database_declarationContext {
	var p = new(Database_declarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KuneiformParserRULE_database_declaration

	return p
}

func (s *Database_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Database_declarationContext) DATABASE() antlr.TerminalNode {
	return s.GetToken(KuneiformParserDATABASE, 0)
}

func (s *Database_declarationContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(KuneiformParserIDENTIFIER, 0)
}

func (s *Database_declarationContext) SCOL() antlr.TerminalNode {
	return s.GetToken(KuneiformParserSCOL, 0)
}

func (s *Database_declarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Database_declarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Database_declarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KuneiformParserVisitor:
		return t.VisitDatabase_declaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KuneiformParser) Database_declaration() (localctx IDatabase_declarationContext) {
	localctx = NewDatabase_declarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KuneiformParserRULE_database_declaration)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(KuneiformParserDATABASE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(67)
		p.Match(KuneiformParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(68)
		p.Match(KuneiformParserSCOL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IUse_declarationContext is an interface to support dynamic dispatch.
type IUse_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetExtension_name returns the extension_name token.
	GetExtension_name() antlr.Token

	// GetAlias returns the alias token.
	GetAlias() antlr.Token

	// SetExtension_name sets the extension_name token.
	SetExtension_name(antlr.Token)

	// SetAlias sets the alias token.
	SetAlias(antlr.Token)

	// Getter signatures
	USE() antlr.TerminalNode
	AS() antlr.TerminalNode
	SCOL() antlr.TerminalNode
	AllIDENTIFIER() []antlr.TerminalNode
	IDENTIFIER(i int) antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	AllCOL() []antlr.TerminalNode
	COL(i int) antlr.TerminalNode
	AllLiteral() []ILiteralContext
	Literal(i int) ILiteralContext
	RBRACE() antlr.TerminalNode
	COMMA() antlr.TerminalNode

	// IsUse_declarationContext differentiates from other interfaces.
	IsUse_declarationContext()
}

type Use_declarationContext struct {
	antlr.BaseParserRuleContext
	parser         antlr.Parser
	extension_name antlr.Token
	alias          antlr.Token
}

func NewEmptyUse_declarationContext() *Use_declarationContext {
	var p = new(Use_declarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_use_declaration
	return p
}

func InitEmptyUse_declarationContext(p *Use_declarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KuneiformParserRULE_use_declaration
}

func (*Use_declarationContext) IsUse_declarationContext() {}

func NewUse_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Use_declarationContext {
	var p = new(Use_declarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KuneiformParserRULE_use_declaration

	return p
}

func (s *Use_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Use_declarationContext) GetExtension_name() antlr.Token { return s.extension_name }

func (s *Use_declarationContext) GetAlias() antlr.Token { return s.alias }

func (s *Use_declarationContext) SetExtension_name(v antlr.Token) { s.extension_name = v }

func (s *Use_declarationContext) SetAlias(v antlr.Token) { s.alias = v }

func (s *Use_declarationContext) USE() antlr.TerminalNode {
	return s.GetToken(KuneiformParserUSE, 0)
}

func (s *Use_declarationContext) AS() antlr.TerminalNode {
	return s.GetToken(KuneiformParserAS, 0)
}

func (s *Use_declarationContext) SCOL() antlr.TerminalNode {
	return s.GetToken(KuneiformParserSCOL, 0)
}

func (s *Use_declarationContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(KuneiformParserIDENTIFIER)
}

func (s *Use_declarationContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(KuneiformParserIDENTIFIER, i)
}

func (s *Use_declarationContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(KuneiformParserLBRACE, 0)
}

func (s *Use_declarationContext) AllCOL() []antlr.TerminalNode {
	return s.GetTokens(KuneiformParserCOL)
}

func (s *Use_declarationContext) COL(i int) antlr.TerminalNode {
	return s.GetToken(KuneiformParserCOL, i)
}

func (s *Use_declarationContext) AllLiteral() []ILiteralContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILiteralContext); ok {
			len++
		}
	}

	tst := make([]ILiteralContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILiteralContext); ok {
			tst[i] = t.(ILiteralContext)
			i++
		}
	}

	return tst
}

func (s *Use_declarationContext) Literal(i int) ILiteralContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILiteralContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILiteralContext)
}
